lox-tests/tests/function/extra_arguments.stderr
ERROR: Expected 2 arguments in function call but got 4
 --> 6:1
  |
6 | f(1, 2, 3, 4); // expect runtime error: Expected 2 arguments but got 4.
  | ^-----------^
